--- a/templates/citas.html
+++ b/templates/citas.html
@@ -3,71 +3,204 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>CLINICA MEDICA - CITAS</title>
+	<title>CLINICA MEDICA</title>
 	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
 	<style type="text/css">
+		html{
+			height: 100%;
+			background-color: white;
+		}
+		#main_body{
+			width: 100%;
+			height: 100%;
+			clear: both;
+			margin: auto;
+			font-size: 10px;
+		}
+		table{
+			font-size: 10px;
+		}
+		label{
+			color:rgb(255, 255, 255, 1.0);
+			float: left;
+		}
+		td a{
+			text-decoration: none;
+		}
 	</style>
 </head>
 <body id="main_body">
 	<div id="content">
 		<nav class="navbar navbar-expand-lg" style="background-color: #0F172B !important; color: #FFFFFF;">
-			<div class="container-fluid">
-			  <a class="navbar-brand" href="#" style="color: #fea116;">CLINICA MEDICA - CITAS</a>
-			  <button style="-webkit-filter: grayscale(1) invert(1);
-  filter: grayscale(1) invert(1);" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			  </button>
-			  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-				  <li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="{{url_for('home')}}" style="color: #FFFFFF;">INICIO</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-link" href="{{url_for('citas')}}" style="color: #FFFFFF;">CITAS MEDICAS</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-link" href="{{url_for('servicios')}}" style="color: #FFFFFF;">SERVICIOS</a>
-				  </li>
-				  <li class="nav-item">
-					  <a class="nav-link" href="{{url_for('pacientes')}}" style="color: #FFFFFF;">PACIENTES</a>
-					</li>
-				  <li class="nav-item">
-					<a class="nav-link" href="{{url_for('contacto')}}" style="color: #FFFFFF;">CONTACTANOS</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-link" href="{{url_for('login')}}" style="color: #FFFFFF; background-color: #44834a;">INGRESAR</a>
-				  </li>
-				</ul>
-			  </div>
-			</div>
-		  </nav>
-
-
-		<div id="carouselExample" class="carousel slide">
-		  <div class="carousel-inner">
-		    <div class="carousel-item active">
-		      <img src="../static/images/bg1.avif" class="d-block w-100" alt="...">
-		    </div>
-		    <div class="carousel-item">
-		      <img src="..." class="d-block w-100" alt="...">
-		    </div>
-		    <div class="carousel-item">
-		      <img src="..." class="d-block w-100" alt="...">
+		  <div class="container-fluid">
+		    <a class="navbar-brand" href="#" style="color: #fea116;">CLINICA MEDICA - DASHBOARD</a>
+		    <button style="-webkit-filter: grayscale(1) invert(1);
+filter: grayscale(1) invert(1);" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+		      <span class="navbar-toggler-icon"></span>
+		    </button>
+		    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+		      <ul class="navbar-nav">
+				<li>
+					<p style="margin-top: 14px; border-right: 50px solid transparent;">BIENVENIDO <span>{{ session['nombre'] }}</span></p>
+				</li>
+				<li class="nav-item" style="float: right; margin-top: 5px;;">
+					<a  class="nav-link" href="{{url_for('logout')}}" style="color: #FFFFFF; background-color: #44834a;">SALIR</a>
+				</li>
+		      </ul>
 		    </div>
 		  </div>
-		  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		    <span class="visually-hidden">Previous</span>
-		  </button>
-		  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		    <span class="visually-hidden">Next</span>
-		  </button>
-		</div>
+		</nav>
 
-		
+		<div class="col-12">
+			<!--<div class="accordion" id="accordionExample">
+				<div class="accordion-item">
+				<h2 class="accordion-header" id="headingOne">
+					<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+					Accordion Item #1
+					</button>
+				</h2>
+				<div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+					<div class="accordion-body">
+					<strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+					</div>
+				</div>
+				</div>
+				<div class="accordion-item">
+				<h2 class="accordion-header" id="headingTwo">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+					Accordion Item #2
+					</button>
+				</h2>
+				<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+					<div class="accordion-body">
+					<strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+					</div>
+				</div>
+				</div>
+				<div class="accordion-item">
+				<h2 class="accordion-header" id="headingThree">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+					Accordion Item #3
+					</button>
+				</h2>
+				<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+					<div class="accordion-body">
+					<strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+					</div>
+				</div>
+				</div>
+			</div>
+		  </div>-->	  
+		<center><div id="modal" style="z-index: 10000; display: none; width: 100%; height: 100%; background-color: #0F172B; z-index: 1; top: 0; right: 0; align-items: center; justify-items: center;">  
+			<h3 style="color: white;">Nueva Cita</h3>
+			<div style="background-color: transparent; padding: 3px;">		
+		<form class="col-12" action="{{url_for('registro_cita')}}" method="POST">
+			<div class="mb-5 row">
+				<label for="staticEmail" class="col-sm-12 col-form-label">Nombre del paciente</label>
+				<div class="col-sm-12">
+				<input type="text" class="form-control" id="staticEmail" name="nom">
+				</div>
+			</div>
+			<div class="mb-5 row">
+				<label for="staticEmail" class="col-sm-12 col-form-label">Telefono</label>
+				<div class="col-sm-12">
+				<input type="text" class="form-control" id="staticEmail" name="tel">
+				</div>
+			</div>
+			<div class="mb-5 row">
+				<label for="staticEmail" class="col-sm-12 col-form-label">Correo</label>
+				<div class="col-sm-12">
+				<input type="email" class="form-control" id="staticEmail" name="email">
+				</div>
+			</div>
+			<div class="mb-5 row">
+				<label for="staticEmail" class="col-sm-12 col-form-label">Sintomas</label>
+				<div class="col-sm-12">
+				<input type="text" min="1" max="200" class="form-control" id="staticEmail" name="sintomas">
+				</div>
+			</div>
+			<div class="mb-5 row">
+				<label for="staticEmail" class="col-sm-12 col-form-label">Fecha</label>
+				<div class="col-sm-12">
+				<input type="text" class="form-control" id="staticEmail" name="fecha">
+				</div>
+			</div>
+			<div class="mb-5 row">
+				<label for="staticEmail" class="col-sm-12 col-form-label">Departamento</label>
+				<div class="col-sm-12">
+				<input type="text" class="form-control" id="staticEmail" name="depto">
+				</div>
+			</div>
+			<div class="mb-5 row">
+				<label for="staticEmail" class="col-sm-12 col-form-label">Genero</label>
+				<div class="col-sm-12">
+				<input type="text" class="form-control" id="staticEmail" name="gen">
+				</div>
+			</div>
+			<div class="mb-5 row">
+				<label for="staticEmail" class="col-sm-12 col-form-label">Hora</label>
+				<div class="col-sm-12">
+				<input type="text" class="form-control" id="staticEmail" name="hora">
+				</div>
+			</div>
+			<div style="display: grid; align-items: center; justify-items: center;">
+				<input type="submit" value="Guardar" class="nav-link" style="width: 100%; color: #FFFFFF; background-color: #44834a; border: 0px; padding: 5px;">
+				<a href="{{url_for('citaspage')}}" class="nav-link" style="width: 100%; color: #FFFFFF; background-color: brown; border: 0px; padding: 5px;">Cancelar</a>
+			</div>
+		</form>
+		{% if mensaje %}
+		<p>{{ mensaje }}</p>
+		{% endif %}
+		</div>
+	</div></center>
+
+	<button class="nav-link" style="color: #FFFFFF; background-color: #44834a; border: 0px; padding: 5px; margin-top: 10px; margin-left: 10px;" id="btnn" onclick="document.getElementById('modal').style.display='grid';document.getElementById('table_pacientes').style.display='none';document.getElementById('btnn').style.display='none';">Nueva Cita</button>
+	<form action="">
+		<input type="text" placeholder="Buscar cita" name="buscar">
+	</form>
+	{% if url_for('dashboard') %}
+		  <table id="table_pacientes" class="table" style="border: 1px solid gray; margin-top: 20px;">
+			<thead>
+			  <tr>
+				<th scope="col">ID</th>
+				<th scope="col">Nombre</th>
+				<th scope="col">Telefono</th>
+				<th scope="col">Email</th>
+				<th scope="col">Sintomas</th>
+				<th scope="col">Fecha</th>
+				<th scope="col">Departamento</th>
+				<th scope="col">Genero</th>
+				<th scope="col">Hora</th>
+				<th scope="col">Correo (recordatorio)</th>
+				<th scope="col">PDF</th>
+				<th scope="col">Actualizar</th>
+				<th scope="col">Eliminar</th>
+			  </tr>
+			</thead>
+			<tbody>
+			  {% for paciente in pacientes %}
+			  <tr>
+				<th scope="row">{{ paciente[0] }}</th>
+				<td> {{ paciente[1] }} </td>
+				<td> {{ paciente[2] }} </td>
+				<td> {{ paciente[3] }} </td>
+				<td> {{ paciente[4] }} </td>
+				<td> {{ paciente[5] }} </td>
+				<td> {{ paciente[6] }} </td>
+				<td> {{ paciente[7] }} </td>
+				<td> {{ paciente[8] }} </td>
+				<td> <a href="{{url_for('enviar_mail')}}?id={{paciente[0]}}">Enviar correo a este paciente</a> </td>
+				<td> <a href="{{url_for('datos_citapaciente')}}?id={{paciente[0]}}"><img src="../static/images/file-earmark-pdf.svg" alt=""></a> </td>
+				<td> <a href="{{url_for('actualizar_paciente')}}?id={{paciente[0]}}"><img src="../static/images/pencil-square.svg" alt=""></a> </td>
+				<td> <a style="color: brown;" href="/eliminar_cita/{{paciente[0]}}"><img src="../static/images/trash.svg" alt=""></a> </td>
+			</tr>
+			  {% endfor %}
+			</tbody>
+		  </table>
+		  {% endif %}
+		 </div>
 	</div>
 	<script type="text/javascript" src="../static/js/bootstrap.bundle.min.js"></script>
 </body>
